--- a/Practical Algorithm/1. Two Sum.md
+++ b/Practical Algorithm/1. Two Sum.md
@@ -209,9 +209,9 @@ public:
 
 ## Reference
 
-1. LeetCode [Two Sum]
+1. LeetCode [1. Two Sum]
    - https://leetcode.com/problems/two-sum/
-2. LeetCode Solutions [Longest Palindromic Substring] by P.-Y. Chen
+2. LeetCode Solutions [1. Two Sum] by P.-Y. Chen
    - https://walkccc.me/LeetCode/problems/1/
 3. Medium [Solving the ‘Two Sum Problem’ on LeetCode — C++ Solutions Walkthrough] by Alexander Obregon
    - https://medium.com/@AlexanderObregon/solving-the-two-sum-problem-on-leetcode-c-answer-s-walkthrough-0aa8b87875e9
