--- a/Practical Algorithm/2. Add Two Numbers.md
+++ b/Practical Algorithm/2. Add Two Numbers.md
@@ -239,9 +239,9 @@ public:
 
 ## Reference
 
-1. LeetCode [Add Two Numbers]
+1. LeetCode [2. Add Two Numbers]
    - https://leetcode.com/problems/add-two-numbers/
-2. LeetCode Solutions [Longest Palindromic Substring] by P.-Y. Chen
+2. LeetCode Solutions [2. Add Two Numbers] by P.-Y. Chen
    - https://walkccc.me/LeetCode/problems/2/
 3. Medium [Solving the ‘Add Two Numbers’ Problem on LeetCode — C++ Solutions Walkthrough] by Alexander Obregon
    - https://medium.com/@AlexanderObregon/solving-the-add-two-numbers-problem-on-leetcode-c-solutions-walkthrough-648077404664
