--- a/Practical Algorithm/3. Longest Substring Without Repeating Characters.md
+++ b/Practical Algorithm/3. Longest Substring Without Repeating Characters.md
@@ -306,7 +306,7 @@ public:
 
 ## Reference
 
-1. LeetCode [Longest Substring Without Repeating Characters]
+1. LeetCode [3. Longest Substring Without Repeating Characters]
    - https://leetcode.com/problems/longest-substring-without-repeating-characters/
-2. LeetCode Solutions [Longest Substring Without Repeating Characters] by P.-Y. Chen
+2. LeetCode Solutions [3. Longest Substring Without Repeating Characters] by P.-Y. Chen
    - https://walkccc.me/LeetCode/problems/3/
