--- a/Practical Algorithm/5. Longest Palindromic Substring.md
+++ b/Practical Algorithm/5. Longest Palindromic Substring.md
@@ -412,5 +412,5 @@ public:
 
 1. LeetCode [5. Longest Palindromic Substring]
    - https://leetcode.com/problems/longest-palindromic-substring/
-2. LeetCode Solutions [Longest Palindromic Substring] by P.-Y. Chen
+2. LeetCode Solutions [5. Longest Palindromic Substring] by P.-Y. Chen
    - https://walkccc.me/LeetCode/problems/5/
