--- a/Practical Algorithm/4. Median of Two Sorted Arrays.md
+++ b/Practical Algorithm/4. Median of Two Sorted Arrays.md
@@ -207,7 +207,7 @@ class Solution:
 
 1️⃣![4-4-a](.\imgs\4-4-a.png)
 
-1️⃣![4-4-b](.\imgs\4-4-b.png)
+2️⃣![4-4-b](.\imgs\4-4-b.png)
 
 ## 3) My code
 
@@ -328,5 +328,5 @@ public:
 
 1. LeetCode [4. Median of Two Sorted Arrays]
    - https://leetcode.com/problems/median-of-two-sorted-arrays/
-2. LeetCode Solutions [Median of Two Sorted Arrays] by P.-Y. Chen
+2. LeetCode Solutions [4. Median of Two Sorted Arrays] by P.-Y. Chen
    - https://walkccc.me/LeetCode/problems/4/
