--- a/Practical Algorithm/6. ZigZag Conversion.md
+++ b/Practical Algorithm/6. ZigZag Conversion.md
@@ -74,29 +74,30 @@ Output: "A"
 class Solution {
 public:
     string convert(string s, int numRows) {
+        int n = s.length();
+        if (n <= 1 || numRows <= 1) return s;
+
         string ans;
+        ans.reserve(n); 
+		
+		// In a zigzag pattern with numRows, one complete "V" shape
+        // ⇒ Cycle = numRows + (numRows - 2)
+        const int cycle = 2 * numRows - 2;
 
-        if (s.length() == 1 || numRows == 1)
-            return s;
-
-        for (int row = 0; row < numRows; ++row) {
-            int i = row;
-            // In a zigzag pattern with numRows, one complete "V" shape
-            // ⇒ Cycle = numRows + (numRows - 2)
-            int j = i + numRows + (numRows - 2);
-            while (i < s.length()) {
+        for (int row = 0; row < numRows; row++) {
+            for (int i = row; i < n; i += cycle) {
                 ans.push_back(s[i]);
-                if (j - (2 * row) < s.length() && row > 0 && row < numRows - 1)
-                    // The Diagonal Character (s[j - 2 × row])
-                    ans.push_back(s[j - (2 * row)]);
-                i = j;
-                j = i + numRows + (numRows - 2);
-            };
-        };
 
+                // The index for the diagonal character
+                int j = i + cycle - (2 * row);
+
+                if (row > 0 && row < numRows - 1 && j < n) {
+                    ans.push_back(s[j]);
+                }
+            }
+        }
         return ans;
-    };
-
+    }
 };
 ```
 
