--- a/Practical Algorithm/5. Longest Palindromic Substring.md
+++ b/Practical Algorithm/5. Longest Palindromic Substring.md
@@ -49,7 +49,7 @@ public:
         if (s.empty()) return "";
         
         int start = 0, maxLen = 0;
-        int n = s.length();
+        const int n = s.length();
 
         for (int i = 0; i < n;) {
             // Optimization 1: Early Exit
@@ -91,30 +91,31 @@ public:
 #### b. Go
 
 - Runtime: 0ms
-- Memory: 4.51 MB
+- Memory: 4.41 MB
 
 ```Go
 func longestPalindrome(s string) string {
-	if len(s) < 2 {
+    n := len(s)
+	if n < 2 {
 		return s
 	}
 
 	start, max := 0, 0
 
-	for i := 0; i < len(s); {
+	for i := 0; i < n; {
 		if (len(s) - i) * 2 <= max {
 			break
 		}
 
 		l, r := i, i
 
-		for r < len(s) - 1 && s[r + 1] == s[i] {
+		for r < n - 1 && s[r + 1] == s[i] {
 			r++
 		}
 
 		i = r + 1
 
-		for l > 0 && r < len(s) - 1 && s[l - 1] == s[r + 1] {
+		for l > 0 && r < n - 1 && s[l - 1] == s[r + 1] {
 			l--
 			r++
 		}
