--- a/Practical Algorithm/1. Two Sum.md
+++ b/Practical Algorithm/1. Two Sum.md
@@ -1,6 +1,6 @@
 # 1. Two Sum
 
-#Arrays #Hash Table
+#Easy #Arrays #Hash Table
 
 [toc]
 
@@ -147,7 +147,7 @@ public:
 - Time Complexity: $$ O(n^2) $$
 - Space Complexity: $$ O(1) $$
 
-- Runtime: 41ms
+- Runtime: 41 ms
 - Memory: 13.94 MB
 
 ```c++
