--- a/Practical Algorithm/2. Add Two Numbers.md
+++ b/Practical Algorithm/2. Add Two Numbers.md
@@ -1,6 +1,6 @@
 # 2. Add Two Numbers
 
-#Linked List #Recursion #Math
+#Medium #Linked List #Recursion #Math
 
 [toc]
 
@@ -49,7 +49,7 @@ Output: [8,9,9,9,0,0,0,1]
 
 #### a. C++
 
-- Runtime: 2ms
+- Runtime: 2 ms
 - Memory: 77.13 MB
 
 ```c++
@@ -91,7 +91,7 @@ class Solution {
 
 #### b. Go
 
-- Runtime: 1ms
+- Runtime: 1 ms
 - Memory: 6.30 MB
 
 ```Go
@@ -128,7 +128,7 @@ func addTwoNumbers(l1 *ListNode, l2 *ListNode) *ListNode {
 
 #### c. Python
 
-- Runtime: 7ms
+- Runtime: 7 ms
 - Memory: 17.87 MB
 
 ```python
