--- a/Practical Algorithm/3. Longest Substring Without Repeating Characters.md
+++ b/Practical Algorithm/3. Longest Substring Without Repeating Characters.md
@@ -1,6 +1,6 @@
 # 3. Longest Substring Without Repeating Characters
 
-#Hash Table #Sliding Window #String
+#Medium #Hash Table #Sliding Window #String
 
 [toc]
 
@@ -49,7 +49,7 @@ Notice that the answer must be a substring, "pwke" is a subsequence and not a su
 
 #### a. C++
 
-- Runtime: 4ms
+- Runtime: 4 ms
 - Memory: 10.83 MB
 
 ```c++
@@ -75,7 +75,7 @@ class Solution {
 
 #### b. Go
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 4.50 MB
 
 ```Go
@@ -101,7 +101,7 @@ func lengthOfLongestSubstring(s string) int {
 
 #### c. Python
 
-- Runtime: 35ms
+- Runtime: 35 ms
 - Memory: 17.91 MB
 
 ```python
@@ -129,7 +129,7 @@ class Solution:
 
 #### a. C++
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 10.87 MB
 
 ```c++
@@ -156,9 +156,10 @@ class Solution {
 
 #### b. Go
 
-```Go
-package main
+- Runtime: 0 ms
+- Memory: 4.34 MB
 
+```Go
 func lengthOfLongestSubstring(s string) int {
 	ans := 0
 	j := -1
@@ -187,6 +188,9 @@ func lengthOfLongestSubstring(s string) int {
 ```
 
 #### c. Python
+
+- Runtime: 9 ms
+- Memory: 19.40 MB
 
 ```Python
 class Solution:
