--- a/Practical Algorithm/4. Median of Two Sorted Arrays.md
+++ b/Practical Algorithm/4. Median of Two Sorted Arrays.md
@@ -1,6 +1,6 @@
 # 4. Longest Substring Without Repeating Characters
 
-#Array #Binary Search #Divide and Conquer
+#Hard #Array #Binary Search #Divide and Conquer
 
 [toc]
 
@@ -44,7 +44,7 @@ Explanation: merged array = [1,2,3,4] and median is (2 + 3) / 2 = 2.5.
 
 #### a. C++
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 95.20 MB
 
 ```c++
@@ -83,7 +83,7 @@ class Solution {
 
 #### b. Go
 
-- Runtime: 2ms
+- Runtime: 2 ms
 - Memory: 6.56 MB
 
 ```go
@@ -153,7 +153,7 @@ func findMedianSortedArrays(nums1 []int, nums2 []int) float64 {
 
 #### c. Python
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 17.64 MB
 
 ```python
@@ -213,7 +213,7 @@ class Solution:
 
 (1)
 
-- Runtime: 3ms
+- Runtime: 3 ms
 - Memory: 95.86 MB
 - Time Complexity: $$ O(m+n) $$
   - Traverse all elements once
