--- a/Practical Algorithm/5. Longest Palindromic Substring.md
+++ b/Practical Algorithm/5. Longest Palindromic Substring.md
@@ -1,6 +1,6 @@
 # 5. Longest Palindromic Substring
 
-#Dynamic Programming #Two Pointers #String
+#Medium #Dynamic Programming #Two Pointers #String
 
 [toc]
 
@@ -39,7 +39,7 @@ Output: "bb"
 
 #### a. C++
 
-- Runtime: 7ms
+- Runtime: 7 ms
 - Memory: 9.38 MB
 
 ```c++
@@ -90,7 +90,7 @@ public:
 
 #### b. Go
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 4.41 MB
 
 ```Go
@@ -132,7 +132,7 @@ func longestPalindrome(s string) string {
 
 #### c. Python
 
-- Runtime: 26ms
+- Runtime: 26 ms
 - Memory: 19.54 MB
 
 ```python
@@ -173,7 +173,7 @@ class Solution:
 
 #### a. C++
 
-- Runtime: 7ms
+- Runtime: 7 ms
 - Memory: 11.85 MB
 
 ```c++
@@ -235,7 +235,7 @@ class Solution {
 
 #### b. Go
 
-- Runtime: 1ms
+- Runtime: 1 ms
 - Memory: 5.69 MB
 
 ```Go
@@ -307,6 +307,9 @@ func min(a, b int) int {
 
 #### c. Python
 
+- Runtime: 29 ms
+- Memory: 19.44 MB
+
 ```python
 class Solution:
     def longestPalindrome(self, s: str) -> str:
@@ -367,7 +370,7 @@ class Solution:
 
 ## 4) My code
 
-- Runtime: 2763ms
+- Runtime: 2763 ms
 - Memory: 244.37 MB
 - Time Complexity: $$ O(n^3) $$
   - `rev.insert(0, 1, s[end]);` → $$O(k)$$
