--- a/Practical Algorithm/6. ZigZag Conversion.md
+++ b/Practical Algorithm/6. ZigZag Conversion.md
@@ -1,6 +1,6 @@
 # 6. ZigZag Conversion
 
-#String #Brute-Force #Math
+#Medium #String #Math
 
 [toc]
 
@@ -67,7 +67,7 @@ Output: "A"
 
 #### a. C++
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 11.10 MB
 
 ```C++
@@ -103,7 +103,7 @@ public:
 
 #### b. Go
 
-- Runtime: 0ms
+- Runtime: 0 ms
 - Memory: 6.64 MB
 
 ```go
@@ -134,8 +134,8 @@ func convert(s string, numRows int) string {
 
 #### c. Python
 
-- Runtime: 9ms
-- Memory: 19.32MB
+- Runtime: 9 ms
+- Memory: 19.32 MB
 
 ```python
 class Solution:
